--- a/references.bib
+++ b/references.bib
@@ -11,3 +11,21 @@
 	year = {2021},
 	keywords = {ecological niche modeling, macroevolution, biogeography, birds, Ecology, phylogeography, Afromontane, Biology},
 }
+
+@article{Moura2023,
+author = "Ricardo Moura and Nuno Pessanha Santos and André Rocha",
+title = "{Processed csv file of the piracy dataset}",
+year = "2023",
+month = "11",
+url = "https://springernature.figshare.com/articles/dataset/Processed_csv_file_of_the_piracy_dataset/24119643",
+doi = "10.6084/m9.figshare.24119643.v1"
+}
+
+@article{Lydeamore2020,
+author = "Michael J. Lydeamore and Patricia T. Campbell and David J. Price and Yue Wu and Adrian J. Marcato and Will Cuningham and Jonathan R. Carapetis and Ross M. Andrews and Malcolm I. McDonald and Jodie McVernon and Steven Y. C. Tong and James M. McCaw",
+title = "{Patient ages at presentation.}",
+year = "2020",
+month = "10",
+url = "https://plos.figshare.com/articles/dataset/Patient_ages_at_presentation_/13052574",
+doi = "10.1371/journal.pcbi.1007838.s006"
+}
