--- a/descriptive_stats.qmd
+++ b/descriptive_stats.qmd
@@ -521,7 +521,7 @@ Using these data, please calculate the mean, median, range, interquartile range,
 
 #### 2: Piracy in the Gulf of Guinea
 
-The following is a dataset looking at oceanic conditions and other variables associated with pirate attacks within the region between 2010 and 2021 (@Moura2023). Using these data, please calculate the mean, median, range, interquartile range, variance, standard deviation, coefficient of variation, standard error, and whether there are any "outliers" for distance from shore for each pirate attack (columns `Distance_from_Coast`).
+The following is a dataset looking at oceanic conditions and other variables associated with pirate attacks within the region between 2010 and 2021 [@Moura2023]. Using these data, please calculate the mean, median, range, interquartile range, variance, standard deviation, coefficient of variation, standard error, and whether there are any "outliers" for distance from shore for each pirate attack (columns `Distance_from_Coast`).
 
 ```{r}
 url_file <- curl("https://figshare.com/ndownloader/files/42314604")
@@ -532,7 +532,7 @@ pirates <- url_file %>% read_csv()
 
 #### 3: Patient ages at presentation
 
-The following is a dataset on skin sores in different communities in Australia and Oceania, specifically looking at the amount of time that passes between skin infections (@Lydeamore2020). This file includes multiple different datasets, and focuses on data from children in the first five years of their life, on househould visits, and on data collected during targeted studies (@Lydeamore2020).
+The following is a dataset on skin sores in different communities in Australia and Oceania, specifically looking at the amount of time that passes between skin infections [@Lydeamore2020]. This file includes multiple different datasets, and focuses on data from children in the first five years of their life, on househould visits, and on data collected during targeted studies [@Lydeamore2020].
 
 ```{r}
 url_file <- curl("https://doi.org/10.1371/journal.pcbi.1007838.s006")
