--- a/references.bib
+++ b/references.bib
@@ -15,7 +15,7 @@
 @article{Moura2023,
 author = "Ricardo Moura and Nuno Pessanha Santos and André Rocha",
 title = "{Processed csv file of the piracy dataset}",
-year = "2023",
+year = {2023},
 month = "11",
 url = "https://springernature.figshare.com/articles/dataset/Processed_csv_file_of_the_piracy_dataset/24119643",
 doi = "10.6084/m9.figshare.24119643.v1"
