--- a/references.bib
+++ b/references.bib
@@ -29,3 +29,23 @@ month = "10",
 url = "https://plos.figshare.com/articles/dataset/Patient_ages_at_presentation_/13052574",
 doi = "10.1371/journal.pcbi.1007838.s006"
 }
+
+@article{lydeamore_estimation_2020,
+	title = {Estimation of the force of infection and infectious period of skin sores in remote {Australian} communities using interval-censored data},
+	volume = {16},
+	issn = {1553-7358},
+	url = {https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1007838},
+	doi = {10.1371/journal.pcbi.1007838},
+	abstract = {Prevalence of impetigo (skin sores) remains high in remote Australian Aboriginal communities, Fiji, and other areas of socio-economic disadvantage. Skin sore infections, driven primarily in these settings by Group A Streptococcus (GAS) contribute substantially to the disease burden in these areas. Despite this, estimates for the force of infection, infectious period and basic reproductive ratio—all necessary for the construction of dynamic transmission models—have not been obtained. By utilising three datasets each containing longitudinal infection information on individuals, we estimate each of these epidemiologically important parameters. With an eye to future study design, we also quantify the optimal sampling intervals for obtaining information about these parameters. We verify the estimation method through a simulation estimation study, and test each dataset to ensure suitability to the estimation method. We find that the force of infection differs by population prevalence, and the infectious period is estimated to be between 12 and 20 days. We also find that optimal sampling interval depends on setting, with an optimal sampling interval between 9 and 11 days in a high prevalence setting, and 21 and 27 days for a lower prevalence setting. These estimates unlock future model-based investigations on the transmission dynamics of skin sores.},
+	language = {en},
+	number = {10},
+	urldate = {2024-09-05},
+	journal = {PLOS Computational Biology},
+	author = {Lydeamore, Michael J. and Campbell, Patricia T. and Price, David J. and Wu, Yue and Marcato, Adrian J. and Cuningham, Will and Carapetis, Jonathan R. and Andrews, Ross M. and McDonald, Malcolm I. and McVernon, Jodie and Tong, Steven Y. C. and McCaw, James M.},
+	month = oct,
+	year = {2020},
+	note = {Publisher: Public Library of Science},
+	keywords = {Epidemiology, Experimental design, Group A streptococcal infection, Indigenous Australian people, Infectious disease epidemiology, Markov models, Public and occupational health, Skin infections},
+	pages = {e1007838},
+	file = {Full Text PDF:/Users/cooperj2/Zotero/storage/MGC5KMLV/Lydeamore et al. - 2020 - Estimation of the force of infection and infectiou.pdf:application/pdf},
+}
